--- a/destination.html
+++ b/destination.html
@@ -127,8 +127,7 @@
     <div class="sa">
         <img src="images/toloiara.jpg" ></div>
     <h3 class="te">
-        Tuléar(ou toliara en Malagasy)est une ville portuaire située
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum soluta iusto inventore, laboriosam, quibusdam facilis porro provident ducimus, aperiam sapiente laborum assumenda exercitationem accusamus commodi odio dolorem reiciendis repudiandae? Quasi eius eaque nesciunt consectetur quod voluptate consequuntur quae impedit officiis corporis, hic vitae tenetur deserunt reprehenderit quo assumenda culpa? Autem, quisquam voluptates? Corporis voluptatibus repellat dolor? Voluptatem asperiores natus iusto provident molestiae perspiciatis voluptate dignissimos culpa, saepe eum magni quo nesciunt enim possimus nostrum error itaque doloremque, rem cupiditate magnam quidem iste fugit! Minima, eum quam esse illum laborum deleniti officiis totam blanditiis repellendus nemo rerum quod nihil similique. Eaque.
+        Tuléar, également appelée Toliara, est une ville envoûtante située dans le sud-ouest de Madagascar, au bord du canal du Mozambique. Connue pour son climat chaud et ensoleillé, elle est le point de départ idéal pour explorer des paysages uniques, entre désert, récifs coralliens et forêts de baobabs. Cette région est un véritable paradis pour les amateurs de plongée, grâce à ses eaux claires et à sa biodiversité marine exceptionnelle. Berceau du peuple vezo, célèbre pour sa culture de pêcheurs, Tuléar offre aussi une immersion culturelle authentique. Entre aventure et détente, Tuléar révèle un autre visage fascinant de Madagascar.
     </h3>
 </div>
 
