--- a/index.html
+++ b/index.html
@@ -210,34 +210,33 @@
                 <div class="card">
                     <div class="IMAGES">
                         <img src="images/sec-8-img-1.png" alt="">
-                    </div>
-                    <button>click Here</button>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro itaque omnis tempora. Explicabo laborum dolorum,
-                         cum accusamus voluptates facilis! Magni dignissimos 
-                         asperiores tempore nisi sequi error eos explicabo vitae!
-                         
-                         </p>
+                     </div>   
+                    <p>Madagascar est une destination unique, riche en paysages époustouflants, biodiversité exceptionnelle et culture fascinante. Des plages paradisiaques aux montagnes majestueuses, en passant par des parcs naturels abritant des espèces endémiques comme les lémuriens, l'île offre des aventures inoubliables.
+                         Son authenticité, sa nature préservée et son accueil chaleureux en font un véritable trésor pour les voyageurs en quête d'évasion. </p>
                 </div> 
 
                 <div class="card">
                     <div class="IMAGES">
                        <img src="images/sec-8-img-2.png" alt="">
                     </div>
-                    <button>click Here</button>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus porro itaque omnis tempora. Explicabo laborum dolorum,
-                        cum accusamus voluptates facilis! Magni dignissimos 
-                        asperiores tempore nisi sequi error eos explicabo vitae!
-                        </p>
+                    <p>Toamasina est une destination idyllique de Madagascar,
+                        <br> avec ses plages de sable fin et son ambiance tropicale.
+                        <br> La ville mêle charme colonial et énergie locale, avec des marchés vivants
+                         et une culture riche. <br>
+                        C'est aussi un point de départ parfait pour explorer la nature sauvage de l'île,
+                         notamment avec ses parcs regorgeant de faune unique. </p>
                 </div> 
 
                 <div class="card">
                     <div class="IMAGES">
                       <img src="images/sec-7-img-3.png" alt="">
                     </div>
-                    <button>click Here</button>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Amet, nihil ex aut labore illo assumenda ipsum magni architecto odit totam eum debitis 
-                         eveniet eius impedit eos iste iusto ducimus pariatur?</p>
+                    <p>Le lac Pangalane est un havre de paix naturel, 
+                        parfait pour des excursions en pirogue et <br>la détente au cœur de paysages idylliques. <br>
+                         Entouré de villages authentiques et d'une faune diversifiée, <br> 
+                        c'est un lieu idéal pour découvrir la vie locale et observer des oiseaux rares.
+                         Un véritable refuge pour les amoureux de 
+                         la nature à la recherche de tranquillité</p>
                 </div> 
             </div>
             
