--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                <ul class="link">
                    <li><a href="" class="link-oo">ACCUEIL</a></li>
                    <li><a href="destination.html" class="link-oo">DESTINATION</a></li>
-                   <li><a href="" class="link-oo">ABOUT</a></li>
+                   <li><a href="About.html" class="link-oo">ABOUT</a></li>
                    <li><a href="Contact.html" class="link-oo">CONACT</a></li>
                 </ul>
             </div>
@@ -58,7 +58,7 @@
  <header>
     <div class="content">
         <div data-aos="zoom-in">
-            <h1 class="head">AVANTURE AVEC NOUS</h1>
+            <h1 class="head">AVENTURE AVEC NOUS</h1>
         </div><br><br>
 
         <div data-aos="fade-up-right">
