--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="entier">
             <div class="sous-titre1">
-                <h1 class="titr">conférnce dépuis 2022</h1>
+                <h1 class="titr">conférence dépuis 2022</h1>
                 <h2 class="titr">We are exlpore</h2>
             
                 <p>Grace à notre expertise et à nos partenariats ave des prestataires de cofiance,<br>
@@ -127,7 +127,7 @@
 <section class="partie1">
     <div class="objet"><br>
         <div class="logoo">
-            <h1>trusted since 2001</h1>
+            <h1></h1>
             <h1>Were are travel agent</h1>
         </div><br><br><br><br>
 
@@ -183,15 +183,15 @@
                 </div>
                 <div class="paragraphe">
                     <i class="fa-sharp-doutone fa-solid fa-circle-check"></i>
-                    <h5>Lorem ipsum dolor sit amet.</h5>
+                    <h5>Nous adoptons chaque itinéraire à vos envies et à votre budget.</h5>
                 </div> 
                 <div class="paragraphe">
                     <i class="fa-sharp-doutone fa-solid fa-circle-check"></i>
-                    <h5>Lorem ipsum dolor sit amet.</h5>
+                    <h5>votre aventure commence ici,réservez dès aujourd'hui.</h5>
                 </div> 
                 <div class="paragraphe">
                     <i class="fa-sharp-doutone fa-solid fa-circle-check"></i>
-                    <h5>Lorem ipsum dolor sit amet.</h5>
+                    <h5>Vivez des expériences mémoriables,partout dans le monde .</h5>
                 </div> 
             </div>
         </div>
