--- a/Contact.html
+++ b/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style .css" type="text/css">
+    <link rel="stylesheet" href="contact.css" type="text/css">
     <link rel="stylesheet" href="font/css/all.css">
 
 </head>
@@ -12,24 +12,24 @@
     <div class="information">
         <div class="numero">
             <i class="fas fa-phone"></i>
-            <p>Téléphone</p>
-            <p>Toujour à L'écoute</p>
-               <p>0383318578 - 0334026700 - 0325082167</p>
+            <p class="ia">Téléphone</p>
+            <p class="ia">Toujour à L'écoute</p>
+            <p>0383318578 - 0334026700 - 0325082167</p>
             
         </div>
 
         <div class="adress">
             <i class="fas far fa-envelope"></i>
-            <P>E-mail</P>
-            <p>Ecrivez vous</p>
-            <p>Manjakely@gmail.com</p>
+            <P class="ia">E-mail</P>
+            <p class="ia">Ecrivez vous</p>
+            <p class="ia">Manjakely@gmail.com</p>
         </div>
 
        <div class="lieu">
            <i class="fa-solid fa-location-dot" ></i>
-           <p>Localisation (ANTANANARIVO)</p>
-           <p> ANDRAHARO</p>
-           <p>Google Maps </p>
+           <p class="ia">Localisation (ANTANANARIVO)</p>
+           <p class="ia"> ANDRAHARO</p>
+           <p class="ia"><a href="https://www.google.com/maps/place/Antananarivo/@-18.8876059,47.3476927,11z/data=!3m1!4b1!4m6!3m5!1s0x21f07de34f1f4eb3:0xdf110608bcc082f9!8m2!3d-18.9184607!4d47.5211293!16zL20vMGZtXzE?entry=ttu&g_ep=EgoyMDI0MTEwNi4wIKXMDSoASAFQAw%3D%3D">Google Maps</a></p>
        </div>
 
     </div>
