--- a/destination.html
+++ b/destination.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style .css" type="text/css">
     <title>Voyages à Madagascar</title>
+    <link rel="stylesheet" href="destination.css" type="text/css">
 </head>
 <body>
-    <div class="destination" data-aos="fade-down">
-        <h1 class="si">Explorer Madagascar</h1>
-        <h3 class="rr">Partez à la découverte de Madagascar: des paysages sauvages, une culture riche et des aventures inoubliables vous attendent.</h3>
-    </div>
+    <header class="destination" data-aos="fade-down">
+        <h1>Explorer Madagascar</h1>
+        <p>Partez à la découverte de Madagascar: des paysages sauvages, une culture riche et des aventures inoubliables vous attendent.</p>
+    </header>
 
     <section class="destinations">
         <h2>Nos Destinations Populaires</h2>
         <div class="destination-grid">
             <div class="destination-item" data-aos="zoom-in-up">
-                <img src="sary/Antananarivo.jfif" alt="Antananarivo">
+                <img src="Antananarivo.jfif" alt="Antananarivo">
                 <h3>Antananarivo</h3>
                 <p>Bienvenue à Antananarivo, ville aux douze collines et aux panoramas époustouflants. Cette capitale unique vous emmène dans un voyage entre passé et présent, avec ses palais royaux, ses marchés animés et ses quartiers emblématiques. Découvrez l'âme de Madagascar dans ses ruelles verdoyantes.</p>
                 <span class="price">À partir de 666 Ariary</span>
@@ -27,7 +26,7 @@
                     </div>
             </div>
             <div class="destination-item" data-aos="zoom-in-up">
-                <img src="sary/baie d'antongyl.jfif" alt="Baie d'Antongil">
+                <img src="baie d'antongyl.jfif" alt="Baie d'Antongil">
                 <h3>Baie d'Antongil</h3>
                 <p>La baie d'Antongil, plus grande baie de Madagascar, est un sanctuaire de biodiversité. Située dans le nord-est, elle est renommée pour l'observation des baleines à bosse de juillet à septembre. Entourée de forêts tropicales et plages de sable blanc, la baie offre une aventure naturelle inoubliable.</p>
                 <span class="price">À partir de 69 Ariary</span>
@@ -37,7 +36,7 @@
                     </div>
             </div>
             <div class="destination-item" data-aos="zoom-in-up">
-                <img src="sary/parc natinal de l'isalo.jfif" alt="Parc National de l'Isalo">
+                <img src="parc natinal de l'isalo.jfif" alt="Parc National de l'Isalo">
                 <h3>Parc National de l'Isalo</h3>
                 <p>Le Parc National de l'Isalo est un paysage de grès sculpté rappelant des décors de western. Dans le sud-ouest de Madagascar, ce parc offre des canyons spectaculaires, des cascades et des bassins naturels, parfaits pour une pause après une randonnée.</p>
                 <span class="price">À partir de 5465 Ariary</span>
@@ -47,7 +46,7 @@
                     </div>
             </div>
             <div class="destination-item" data-aos="zoom-in-up">
-                <img src="sary/ile sainte marie.jfif" alt="Île Sainte-Marie">
+                <img src="ile sainte marie.jfif" alt="Île Sainte-Marie">
                 <h3>Île Sainte-Marie</h3>
                 <p>Sur l'Île Sainte-Marie, vous découvrirez un petit coin de paradis figé dans le temps. Plages tranquilles, récifs de corail, et histoires de pirates offrent un cadre unique. Profitez de la migration des baleines pour un spectacle naturel rare.</p>
                 <span class="price">À partir de 2656 Ariary</span>
@@ -70,7 +69,7 @@
                 offre plusieurs destinations intéressantes pour créer une agence de voyage <br>
                 une destination idéale pourrait etre l'ile de NOSY IRANJA ,souvent applée "l'ile de tortues"<br>
                 Elle est celèbre pour ses plages de sable blanc ses eaux cristallines <br> et la possibilités d'observer des tortues</h2>
-            <div class="sar">
+            <div class="sar"data-aos="zoom-in-up" >
                 <img src="sary/hotelyy - Copie.jpg" width="400px">
                 <img src="images/sec-6-img-1.png" width="900px">
                 <img src="sary/mialy - Copie.jpg" width="400px">
@@ -95,7 +94,7 @@
                <h1>Découvrez le monde autrement,avec des voyages sur des sites à couper le souffle,<br>
                  vous émmènent vers des expériences inoubliables </h1>
     </div>
-<div class="menu-gl"> 
+ <div class="menu-gl"> 
      <div class="s">
         <div class="lk"></div><br><br>
         <h3 class="sdd">MANDA FORT:un bel endroit chargé d'histtoire (mai 2022)
@@ -116,9 +115,9 @@
             d'énomes quantités d'eau dans son tronc pour suivre
             aux sécheresse/MORONDAVA</h3>
     </div>
-</div><br><br>
+ </div><br><br>
 
-<div class="toli">
+ <div class="toli">
     <h3 class="te">
        Tuléar(ou toliara en Malagasy)est une ville portuaire située
        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem in labore repellat natus quisquam sunt quis, sequi saepe explicabo itaque dolore tenetur magni perspiciatis repudiandae expedita nihil aut voluptatibus amet placeat reiciendis? Ipsum amet similique accusantium, esse minus, distinctio quas laboriosam ullam inventore aut aspernatur quaerat placeat fugit explicabo aliquid modi incidunt, atque sapiente corporis temporibus eligendi dolorum maxime est? Voluptatum assumenda alias mollitia. Perspiciatis minus nobis qui quae architecto iusto suscipit reiciendis voluptatum officia delectus, asperiores quos velit quaerat eos corrupti consequatur ab ullam impedit, assumenda numquam dicta est neque, voluptatibus cupiditate! Qui, aperiam voluptates. Commodi voluptates qui a.
@@ -129,7 +128,6 @@
     <h3 class="te">
         Tuléar, également appelée Toliara, est une ville envoûtante située dans le sud-ouest de Madagascar, au bord du canal du Mozambique. Connue pour son climat chaud et ensoleillé, elle est le point de départ idéal pour explorer des paysages uniques, entre désert, récifs coralliens et forêts de baobabs. Cette région est un véritable paradis pour les amateurs de plongée, grâce à ses eaux claires et à sa biodiversité marine exceptionnelle. Berceau du peuple vezo, célèbre pour sa culture de pêcheurs, Tuléar offre aussi une immersion culturelle authentique. Entre aventure et détente, Tuléar révèle un autre visage fascinant de Madagascar.
     </h3>
-</div>
-
+ </div>
 </body>
 </html>
