--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <button class="click">cliquer ici</button>
     </div>
     <div class="par1">
-        <div class="photo"></div>
+        <div class="photo" data-aos="zoom-in"> </div>
 
         <div class="entier">
             <div class="sous-titre1">
@@ -217,7 +217,7 @@
 
                 <div class="card">
                     <div class="IMAGES">
-                       <img src="images/sec-8-img-2.png" alt="">
+                       <img src="images/sec-8-img-2.png" data-aos="zoom-in-up">
                     </div>
                     <p>Toamasina est une destination idyllique de Madagascar,
                         <br> avec ses plages de sable fin et son ambiance tropicale.
@@ -240,9 +240,6 @@
                 </div> 
             </div>
             
-
-           
-
 
 
     <script src="Aos/dist/aos.js"></script>
