--- a/About.html
+++ b/About.html
@@ -11,7 +11,6 @@
       <div class="têtê">
         <h1>DESTINATION:MADAGASCAR</h1>
       </div>
-
     
        <div class="voyage">
            <h2 class="s-titre">type de voyage:Séjour organisé de 10jours</h2>
@@ -19,7 +18,7 @@
                          Jour 1-3 : Antananarivo (visite de la capitale, marchés locaux, palais royal) <br>
                          Jour 4-6: Parc national d'Andasibe-Mantadia (observation des lémuriens et randonnée) <br>
                          Jour 7-9: Nosy Be (plongée, détente sur les plages) <br>
-                         Jour 9-10 : Réserve de Lokobe (excursion, rencontre avec les villageois)</p>
+                         Jour 9-10 : Réserve de Lokobe (excursion, rencontre avec les villageois)</p> <br> <br>
            <p class="remarque">Le site peut proposer différents types de voyages :
                 circuits en groupe, voyage sur mesure ou même des croisières pour explorer la côte.</p>
         </div>
